CHANGES.txt

v. 1.0 (February 17, 2014) 

Initial Release


v. 1.1 (March 11, 2014)

Added Features
- EMG selection based on Analog Labels from each C3D input file 
- Added shoulder, elbow, and wrists JC, and setup files for Griffith University markerset
- Implemented C3D2MAT processing step using BTK to avoid C3Dserver platform 
  constrain (Matlab 32 bit on Windows) 

Restructuring
- Added src/shared folder to store functions common to several steps

Other Changes
- Added memory of last path when selecting files from graphical user interfaces (GUIs)
- Removed warning messages caused by the lack of subject's first and last names when loading a predefined acquisition.xml 

Bug Fixes
- When running a predefined elaboration.xml, the GUIs asked for a new elaboration identifier that won't be used.
Modified pop-up order in Elaboration and Static Interface: now user is asked to choose what to do 
(set a new elaboration, load and modify an old one or run one previously defined), and only after to insert 
the new elaboration identifier if it is the case. 